version 2014-10-04
      Add was sent/not sent a campaign
      Add clicked any link/did not click any link in a campaign

version 2014-10-03
      Use multi-select for select list and radio buttons
      Select subscribers who meet any or all conditions
      Use enum for operators

version 2014-09-27
      Correct error reporting

version 2014-09-26
      Pull Request #1, strict warnings

version 2014-09-25
      Add regexp matching for email address and text attributes

version 2014-09-24
      Initial release to GitHub